examples/errors/syntax-errors/target-rs/syntax-errors/src/ast.rs
use crate::*;

#[allow(non_upper_case_globals)]
pub static mut __A__ITEM_PATH_ID_INTERFACE: Option<__ItemPathIdInterface> = None;

#[rustfmt::skip]
#[ad_hoc_devsoul_dependency::value_conversion]
#[derive(Debug, Clone, PartialEq)]
pub struct A {
}

impl A {
    pub fn __constructor() -> Self {
        Self{
        }
    }
}

#[rustfmt::skip]
impl crate::ast::A {
}